fix grid alignment on main page

--- a/css/style.css
+++ b/css/style.css
@@ -7289,14 +7289,14 @@ footer .tiny-border span {
 
 /* select2 end */
 
-.grid-divider > [class*="col-"]:nth-child(n + 2):after {
+/* .grid-divider > [class*="col-"]:nth-child(n + 2):after {
   content: "";
   position: absolute;
   top: 0;
   bottom: 0;
   border-left: solid 1px rgba(255, 255, 255, 0.3);
   height: auto;
-}
+} */
 
 .grid-divider.dark > [class*="col-"]:nth-child(n + 2):after {
   border-left: solid 1px rgba(0, 0, 0, 0.25);
